--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,31 @@
-.App {
+.app-container {
+  margin: 0 auto;
+  width: 20rem;
+  height: 20rem;
+  background-color: #2653b3;
+
+  /* centers text in container */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.counter-container {
+  display: flex;
+  flex-direction: column;
+  width: 20rem;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.text {
+}
+
+html {
+  background-color: #505869;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +62,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */ ;
