--- a/src/components/cards/cards.styles.css
+++ b/src/components/cards/cards.styles.css
@@ -3,8 +3,8 @@
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0 auto;
 
-  row-gap: 20px;
-  column-gap: 20px;
+  row-gap: 40px;
+  column-gap: 40px;
   width: 800px;
   height: 1200px;
   justify-items: center;
@@ -14,8 +14,14 @@
 .card-container {
   width: 300px;
   height: 300px;
-  background-color: whitesmoke;
+  background-color: rgb(228, 228, 228, 0.5);
   border: 2px solid #777;
+  border-radius: 9px;
+  box-shadow: 10px 10px 15px 5px rgb(0, 0, 0, 0.4);
+}
+
+.card-container:hover {
+  transform: rotateZ(10deg);
 }
 .card-name {
   font-size: 24px;
