--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+.theme {
+  width: 100vw;
+  height: 100vh;
+  /* background-image: url("../public/matrix.jpg"); */
+  background-image: url("./images/sphere.jpg");
+  /* background-image: url("./images/matrix.jpg"); */
+  /* background-image: url("./images/warpspeed.jpg"); */
+  background-size: cover;
+}
+
+body {
+  /* background-color: red; */
+}
 .app-container {
   margin: 0 auto;
   width: 20rem;
@@ -18,11 +31,12 @@
   align-items: center;
 }
 
-html {
-  /* background-color: #505869; */
+/* html {
   background-image: url("../public/images/sphere.jpg");
-  background-size: cover;
-}
+  /* background-image: url("../public/images/matrix.jpg"); */
+/* background-image: url("../public/images/warpspeed.jpg"); */
+/* background-size: cover; */
+/* }  */
 
 .fetch-btn {
   font-size: 24px;
