--- a/src/components/cards/cards.styles.css
+++ b/src/components/cards/cards.styles.css
@@ -1,27 +1,28 @@
 .cards-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 0 auto;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-template-columns: repeat(4, 1fr);
+  margin: 0 25vw;
 
   row-gap: 40px;
   column-gap: 40px;
-  width: 800px;
-  height: 1200px;
+  width: 1000px;
+  min-height: 800px;
   justify-items: center;
   /* border: 2px solid red; */
 }
 
 .card-container {
-  width: 300px;
-  height: 300px;
-  background-color: rgb(228, 228, 228, 0.5);
+  min-width: 450px;
+  min-height: 470px;
+  background-color: rgb(228, 228, 228, 0.7);
   border: 2px solid #777;
   border-radius: 9px;
   box-shadow: 10px 10px 15px 5px rgb(0, 0, 0, 0.4);
 }
 
 .card-container:hover {
-  transform: rotateZ(10deg);
+  transform: rotateZ(5deg);
 }
 .card-name {
   font-size: 24px;
@@ -31,7 +32,6 @@
 
 .card-job-title {
   font-size: 16px;
-  text-align: center;
 }
 
 /* Needed to center our image in the center */
@@ -47,4 +47,8 @@
   align-self: center;
   justify-content: center;
   align-content: center;
+}
+
+.card-description {
+  padding-left: 5%;
 }
