--- a/src/components/cards/cards.styles.css
+++ b/src/components/cards/cards.styles.css
@@ -1,8 +1,18 @@
+/* 
+font-family: 'Oswald', sans-serif; 
+font-family: 'Montserrat', sans-serif;
+*/
+
+body {
+  color: #404040;
+}
+
 .cards-container {
   display: grid;
   /* grid-template-columns: 1fr 1fr 1fr; */
   grid-template-columns: repeat(4, 1fr);
-  margin: 0 25vw;
+  margin: 0 17vw;
+  /* margin: 0 25vw; */
 
   row-gap: 40px;
   column-gap: 40px;
@@ -13,21 +23,34 @@
 }
 
 .card-container {
-  min-width: 450px;
-  min-height: 470px;
-  background-color: rgb(228, 228, 228, 0.7);
-  border: 2px solid #777;
+  min-width: 420px;
+  max-height: 600px;
+  /* background-color: #deb493; */
+  background-color: #f2f2f2;
   border-radius: 9px;
   box-shadow: 10px 10px 15px 5px rgb(0, 0, 0, 0.4);
 }
 
-.card-container:hover {
-  transform: rotateZ(5deg);
-}
 .card-name {
+  margin-top: 90px;
+  font-family: "Oswald", sans-serif;
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 600;
   text-align: center;
+  margin-bottom: 0;
+}
+
+.card-title {
+  margin-top: 0;
+  text-align: center;
+  color: #a0a0a0;
+}
+
+.card-description {
+  padding-left: 8%;
+  /* padding-left: 5%; */
+  /* padding-left: 18%; */
+  font-family: "Montserrat", sans-serif;
 }
 
 .card-job-title {
@@ -35,20 +58,65 @@
 }
 
 /* Needed to center our image in the center */
-.avatar-container {
+.banner {
   display: grid;
   place-items: center;
+  padding: 5px;
+  border-radius: 9px;
+
+  /* border-radius: 50px; */
+  /* border: 5px solid linear-gradient(to left, rgba(251, 8, 8, 0.5),rgba(19, 202, 199, 0.5))); */
+  background-image: url("../../images/warpspeed.jpg");
+  /* background-image: url("../../images/matrix.jpg"); */
+  background-size: cover;
 }
 
 .avatar {
-  width: 180px;
-  height: 180px;
+  width: 160px;
+  height: 160px;
   align-items: center;
   align-self: center;
   justify-content: center;
   align-content: center;
+  border-radius: 50%;
+  background-color: blue;
+  background-image: url("../../images/matrix.jpg");
+  background-size: cover;
+  /* Moves User image between Banner and Text */
+  border: 5px solid #f2f2f2;
+  transform: translateY(50%);
+  /* box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3); */
+}
+.avatar:hover {
+  /* transition: 500ms; */
+  transition: 300ms ease-in-out;
+  transform: translateY(50%) scale(1.1);
 }
 
-.card-description {
-  padding-left: 5%;
+.card-btn-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0px 40px 0px;
+}
+
+.card-btn {
+  font-size: 24px;
+  font-weight: bold;
+  padding: 12px;
+  width: 300px;
+  border-radius: 50px;
+  border: none;
+  background-color: #ffd01a;
+  transition: 200ms ease-in-out;
+}
+
+.card-btn:hover {
+  background-color: #efb10a;
+  transform: scale(1.1);
+}
+
+/* Decrease to default & Darken ON CLICK */
+.card-btn:active {
+  background-color: #e8a200;
+  transform: scale(1);
 }
