--- a/src/size-form/size-form.styles.css
+++ b/src/size-form/size-form.styles.css
@@ -1,7 +1,8 @@
 .form-container {
   display: flex;
   flex-direction: column;
-  margin: 10vh auto;
+  margin: 0 auto;
+  margin-bottom: 100px;
   width: 270px;
 }
 
