--- a/src/components/cards/cards.styles.css
+++ b/src/components/cards/cards.styles.css
@@ -47,14 +47,18 @@ body {
 }
 
 .card-description {
-  padding-left: 8%;
-  /* padding-left: 5%; */
-  /* padding-left: 18%; */
+  padding-left: 14%;
   font-family: "Montserrat", sans-serif;
 }
 
-.card-job-title {
-  font-size: 16px;
+/* Add space between icon and description text */
+.space {
+  padding-left: 7px;
+}
+
+/* Aligns Icon with Description Text */
+ion-icon {
+  vertical-align: middle;
 }
 
 /* Needed to center our image in the center */
@@ -63,11 +67,10 @@ body {
   place-items: center;
   padding: 5px;
   border-radius: 9px;
-
-  /* border-radius: 50px; */
-  /* border: 5px solid linear-gradient(to left, rgba(251, 8, 8, 0.5),rgba(19, 202, 199, 0.5))); */
-  background-image: url("../../images/warpspeed.jpg");
-  /* background-image: url("../../images/matrix.jpg"); */
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  /* background-image: url("../../images/warpspeed.jpg"); */
+  background-image: url("../../images/matrix.jpg");
   background-size: cover;
 }
 
@@ -80,7 +83,8 @@ body {
   align-content: center;
   border-radius: 50%;
   background-color: blue;
-  background-image: url("../../images/matrix.jpg");
+  /* background-image: url("../../images/matrix.jpg"); */
+  background-image: url("../../images/warpspeed.jpg");
   background-size: cover;
   /* Moves User image between Banner and Text */
   border: 5px solid #f2f2f2;
