--- a/src/components/cards/cards.styles.scss
+++ b/src/components/cards/cards.styles.scss
@@ -76,18 +76,19 @@ body {
     }
 
     .card-name {
-      margin-top: 90px;
+      margin-top: 55px;
       font-family: "Oswald", sans-serif;
       font-size: 24px;
       font-weight: 600;
       text-align: center;
-      margin-bottom: 0;
+      margin-bottom: 3px;
     }
 
     .card-title {
       margin-top: 0;
       text-align: center;
       color: #a0a0a0;
+      margin-bottom: 20px;
     }
 
     .card-description {
