--- a/src/components/card-icon/card-icon.styles.scss
+++ b/src/components/card-icon/card-icon.styles.scss
@@ -1,17 +1,14 @@
-.icon-container {
-  display: flex;
-  justify-content: end;
-  margin-right: 2%;
-  margin-top: 2%;
-  // width: 50px;
-  cursor: pointer;
-  .card-icon {
-    width: 30px;
-    height: 30px;
-    // cursor: pointer;
+.card-icon {
+  width: 30px;
+  height: 30px;
+  align-self: flex-end;
+  padding: 6px;
+  margin-right: 5px;
+  margin-top: 5px;
+  border-radius: 50%;
 
-    &:hover {
-      cursor: pointer;
-    }
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(211, 211, 211);
   }
 }
