created card component, moved card logic from cardlist into card component

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@
   font-family: "Audiowide", cursive;
   /* font-family: "Baumans", cursive; */
   text-align: center;
-  color: rgb(35 98 238);
+  // color: rgb(35 98 238);
   background-color: #2a2a2a;
   // width: 40%;
   margin: 0 auto;
