--- a/src/components/sidebar/sidebar.styles.scss
+++ b/src/components/sidebar/sidebar.styles.scss
@@ -1,22 +1,8 @@
-// .sidebar-container {
-//   display: flex;
-//   flex-direction: column;
-//   width: 300px;
-//   height: 100vh;
-//   background-color: #404040;
-// }
-//  {
-//   display: flex;
-//   flex-direction: column;
-//   width: 300px;
-//   height: 100vh;
-//   background-color: #404040;
-// }
-
 /* The sidebar menu */
 .sidebar-container {
   height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 22vw; /* Set the width of the sidebar */
+  // width: 22vw; /* Set the width of the sidebar */
+  min-width: 400px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top - Prevents card avatar from displaying through sidebar */
   // top: 0; /* Stay at the top */
@@ -26,4 +12,10 @@
   border-bottom-right-radius: 45px;
   border-top-right-radius: 30px;
   padding-top: 20px;
+
+  .hired-container {
+    color: white;
+  }
 }
+
+// HIRED LIST - WILL MOVE TO COMPONENT AFTER
