--- a/src/size-form/size-form.styles.scss
+++ b/src/size-form/size-form.styles.scss
@@ -14,18 +14,45 @@
     margin: 0 auto;
   }
 
+  // .submit-btn {
+  //   font-family: "Audiowide", cursive;
+  //   border-radius: 9px;
+  //   font-size: 16px;
+  //   padding: 10px;
+  //   background-color: rgb(35 98 238);
+  //   color: #f2f2f2;
+  //   transition: 200ms ease-in-out;
+
+  //   &:hover {
+  //     background-color: rgb(32, 92, 222);
+  //     cursor: pointer;
+  //   }
+  // }
+
   .submit-btn {
     font-family: "Audiowide", cursive;
-    border-radius: 9px;
-    font-size: 16px;
-    padding: 10px;
+
+    // font-size: 16px;
+    font-size: 12px;
+
+    border-radius: 12px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    // padding: 10px 20px 10px 20px;
+    padding: 10px 5px 10px 5px;
+    width: 70%;
+
+    border: 2px solid rgb(35 98 238);
+    color: white;
     background-color: rgb(35 98 238);
-    color: #f2f2f2;
-    transition: 200ms ease-in-out;
+    box-shadow: 5px 5px 10px 2px rgb(0, 0, 0, 0.4);
 
     &:hover {
-      background-color: rgb(32, 92, 222);
       cursor: pointer;
+      background-color: rgb(31, 89, 213);
+      border: 2px solid rgb(31, 89, 213);
+      transition: 200ms ease-in-out;
+      box-shadow: 5px 5px 10px 2px rgb(0, 0, 0, 0);
     }
   }
 
