--- a/src/components/sidebar/sidebar.styles.scss
+++ b/src/components/sidebar/sidebar.styles.scss
@@ -7,7 +7,9 @@
   z-index: 1; /* Stay on top - Prevents card avatar from displaying through sidebar */
   // top: 0; /* Stay at the top */
   // left: 0;
-  background-color: #404040; /* Black */
+  // background-color: #404040; /* Black */
+  background-color: rgb(64, 64, 64, 0.6); /* Black */
+  border: 2px solid rgb(122, 122, 122);
   overflow-x: hidden; /* Disable horizontal scroll */
   border-bottom-right-radius: 45px;
   border-top-right-radius: 30px;
