--- a/src/components/sidebar/sidebar.styles.scss
+++ b/src/components/sidebar/sidebar.styles.scss
@@ -9,7 +9,7 @@
   // left: 0;
   // background-color: #404040; /* Black */
   background-color: rgb(64, 64, 64, 0.6); /* Black */
-  border: 2px solid rgb(122, 122, 122);
+  border-right: 2px solid rgb(122, 122, 122);
   overflow-x: hidden; /* Disable horizontal scroll */
   border-bottom-right-radius: 45px;
   border-top-right-radius: 30px;
@@ -17,6 +17,11 @@
 
   .hired-container {
     color: white;
+  }
+
+  .flex {
+    display: flex;
+    justify-content: center;
   }
 }
 
