--- a/src/components/bookmark-list/bookmark-list.styles.scss
+++ b/src/components/bookmark-list/bookmark-list.styles.scss
@@ -36,6 +36,10 @@ $textColor: white;
         cursor: pointer;
         background-color: rgb(169, 169, 169);
       }
+
+      .bookmarkCheckmark {
+        vertical-align: middle;
+      }
     }
   }
 }
