--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,7 @@
-// .theme {
-//   width: 100vw;
-//   height: 100vh;
-//   background-image: url("./images/sphere.jpg");
-//   /* background-image: url("./images/matrix.jpg"); */
-//   /* background-image: url("./images/warpspeed.jpg"); */
-//   background-size: cover;
-//   background-attachment: fixed;
-// }
 * {
   padding: 0;
   margin: 0;
-  // background: red;
+  box-sizing: border-box;
 }
 
 .app {
@@ -20,19 +11,13 @@
   background-image: url("./images/sphere.jpg");
   background-size: 100vw;
   background-size: cover;
-  // background-position: center;
   background-attachment: fixed;
+
+  overflow-x: hidden;
 }
 
 .theme {
-  // background-size: 100%;
-  // background-position: center;
-  // background-attachment: fixed;
   padding-bottom: 7vh;
-
-  // PUSH theme to the right, px == sidebar width
-  // margin-left: 30%;
-  // margin-left: 30vw;
   width: 100vw;
 }
 
@@ -79,4 +64,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 575.98px) {
+  .company-header {
+    font-size: 36px;
+  }
 }
