--- a/src/components/card-icon/card-icon.styles.scss
+++ b/src/components/card-icon/card-icon.styles.scss
@@ -1,14 +1,20 @@
-.card-icon {
-  width: 30px;
-  height: 30px;
-  align-self: flex-end;
-  padding: 6px;
-  margin-right: 5px;
-  margin-top: 5px;
-  border-radius: 50%;
+.card-icon-container {
+  display: flex;
+  justify-content: flex-end;
 
-  &:hover {
-    cursor: pointer;
-    background-color: rgb(211, 211, 211);
+  .card-icon {
+    width: 45px;
+    height: 45px;
+  }
+
+  .card-icon ion-icon {
+    margin-top: 4px;
+    border-radius: 50%;
+    padding: 5px;
+
+    &:hover {
+      cursor: pointer;
+      background-color: rgb(211, 211, 211);
+    }
   }
 }
