--- a/src/components/work-icon/work-icon.styles.scss
+++ b/src/components/work-icon/work-icon.styles.scss
@@ -5,21 +5,37 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+
   // vertically centers icon
   margin: auto 0;
   width: 18%;
-}
 
-.work-icon {
-  width: 24px;
-  height: 24px;
-  stroke: white;
-}
+  .icon-container {
+    border-radius: 50%;
+    padding: 5px;
 
-.work-count {
-  position: absolute;
-  font-size: 12px;
-  font-weight: bold;
-  bottom: 16px;
-  color: white;
+    &:hover {
+      cursor: pointer;
+      background-color: rgb(161, 161, 161);
+    }
+
+    ion-icon {
+      width: 36px;
+      height: 36px;
+    }
+  }
+
+  .work-icon {
+    width: 24px;
+    height: 24px;
+    stroke: white;
+  }
+
+  .work-count {
+    position: absolute;
+    font-size: 12px;
+    font-weight: bold;
+    bottom: 16px;
+    color: white;
+  }
 }
